// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarketplaceAppPage should match a snapshot when has an error 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div
        classname="mock-css."
      >
        <div
          class="mock-css.
  padding-left: 0.75rem;
  display: flex;
  align-items: center;
  border-radius: var(--default-border-radius) 0 0 var(--default-border-radius);
  cursor: pointer;

  , {
    color: var(--color-white);
  }
"
          data-testid="close-icon"
        >
          <mock-styled.span
            classname=""
          >
            <svg />
          </mock-styled.span>
        </div>
        <div
          class="mock-css.
  padding: 0.75rem;
  transition: 0.5s;
  width: 100%;
  color: var(--color-black);
  font-size: var(--font-size-default);
"
        >
          Something went wrong fetching the app details. Please refresh this page.
        </div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div
      classname="mock-css."
    >
      <div
        class="mock-css.
  padding-left: 0.75rem;
  display: flex;
  align-items: center;
  border-radius: var(--default-border-radius) 0 0 var(--default-border-radius);
  cursor: pointer;

  , {
    color: var(--color-white);
  }
"
        data-testid="close-icon"
      >
        <mock-styled.span
          classname=""
        >
          <svg />
        </mock-styled.span>
      </div>
      <div
        class="mock-css.
  padding: 0.75rem;
  transition: 0.5s;
  width: 100%;
  color: var(--color-black);
  font-size: var(--font-size-default);
"
      >
        Something went wrong fetching the app details. Please refresh this page.
      </div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`MarketplaceAppPage should match a snapshot when has data 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div
        classname="mock-css.
  flex: 1 1 auto;
"
      >
        <mock-styled.aside
          classname=""
        >
          <mock-styled.span
            classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css.
  font-size: 5rem;
"
          >
            <svg />
          </mock-styled.span>
          <mock-styled.p
            classname=""
          >
            Marketplace Visibility and Installation Management
          </mock-styled.p>
          <mock-styled.p
            classname="mock-css."
          >
            To set the visibility of app in the Marketplace or manage installations, use the various sections on this page.
          </mock-styled.p>
          <mock-styled.button
            classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css."
            type="button"
          >
            <mock-styled.div />
            Back To Apps
          </mock-styled.button>
          <mock-styled.button
            classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css."
            type="button"
          >
            <mock-styled.div />
            View Listing
          </mock-styled.button>
        </mock-styled.aside>
        <mock-styled.section
          classname="mock-css.
  height: 100%;
"
        >
          <mock-styled.div
            classname="mock-css.
  justify-content: space-between;
"
          >
            <mock-styled.h1
              classname=""
            >
              SOME_NAME
               - 
              Geo Diary
            </mock-styled.h1>
          </mock-styled.div>
          <mock-styled.h2
            classname=""
          >
            Pricing Information
          </mock-styled.h2>
          <div
            class="mock-css.
  margin-bottom: 2.5rem;
"
          >
            <mock-styled.p
              classname="mock-css."
            >
              Reapit Ltd
               have specified there is no cost for using this App/Integration.
            </mock-styled.p>
          </div>
          <mock-styled.h2
            classname=""
          >
            Data Permissions
          </mock-styled.h2>
          <mock-styled.p
            classname="mock-css."
          >
            By installing this app, you are granting the following permissions to your data:
          </mock-styled.p>
          <mock-styled.div
            classname="mock-css.
  margin-bottom: 2.5rem;
"
          >
            <mock-styled.div
              classname=""
            >
              Information about your organisation
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              Names/email addresses of your users
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              Read applicants
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              Read appointments
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              Write appointments
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              Read contacts
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              Read landlords
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              Read negotiators
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              Read offers
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              Read offices
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              Read properties
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              Read tenancies
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              Read vendors
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              Read Referrals
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.h2
            classname=""
          >
            Application Visibility
          </mock-styled.h2>
          <mock-styled.p
            classname="mock-css."
          >
            By default, all apps will be visible to all offices/users within your organisation. If you wish to hide an app from the Marketplace, please deselect. Hidden apps (apps that have been deselected) will not be visible in the Marketplace to any offices/users inside of your organisation.
          </mock-styled.p>
          <mock-styled.div
            classname="mock-css.
  margin-bottom: 2.5rem;
"
          >
            <mock-styled.input
              checked="true"
              classname=""
              id="cfbe6f29-4003-4648-aa5a-8eb777bd606e"
              type="checkbox"
            />
            <mock-styled.label
              htmlfor="cfbe6f29-4003-4648-aa5a-8eb777bd606e"
            >
              Visible
            </mock-styled.label>
          </mock-styled.div>
          <div
            class="mock-css.
  margin-bottom: 2.5rem;
"
          >
            <mock-styled.h2
              classname=""
            >
              Current Installations
            </mock-styled.h2>
            <mock-styled.p
              classname="mock-css."
            >
              This app is not currently installed. You can either install for your organisation or specific office groups in the section below.
            </mock-styled.p>
          </div>
          <mock-styled.h2
            classname=""
          >
            Installation
          </mock-styled.h2>
          <mock-styled.p
            classname="mock-css. mock-css."
          >
            Please select the type of installation you require for this app:
          </mock-styled.p>
          <mock-styled.div
            classname="mock-css."
          >
            <mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  margin-bottom: 0.75rem;
"
              >
                <mock-styled.input
                  checked="false"
                  classname=""
                  id="WHOLE_ORG"
                  type="checkbox"
                />
                <mock-styled.label
                  htmlfor="WHOLE_ORG"
                >
                  Install for the whole of your organisation
                </mock-styled.label>
              </mock-styled.div>
              <mock-styled.p
                classname=""
              >
                This will grant the app access to all data for all users and offices across your organisation
              </mock-styled.p>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  margin-bottom: 0.75rem;
"
              >
                <mock-styled.input
                  checked="false"
                  classname=""
                  id="SPECIFIC_OFFICE_GROUPS"
                  type="checkbox"
                />
                <mock-styled.label
                  htmlfor="SPECIFIC_OFFICE_GROUPS"
                >
                  Install for specific office groups
                </mock-styled.label>
              </mock-styled.div>
              <mock-styled.p
                classname=""
              >
                This will grant the app access to only data for the specific offices inside of each office group
              </mock-styled.p>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="mock-css.
  margin-bottom: 1.25rem;
"
          >
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.button
                classname="mock-css."
                disabled="true"
              >
                <mock-styled.div />
                Save
              </mock-styled.button>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.section>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div
      classname="mock-css.
  flex: 1 1 auto;
"
    >
      <mock-styled.aside
        classname=""
      >
        <mock-styled.span
          classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css.
  font-size: 5rem;
"
        >
          <svg />
        </mock-styled.span>
        <mock-styled.p
          classname=""
        >
          Marketplace Visibility and Installation Management
        </mock-styled.p>
        <mock-styled.p
          classname="mock-css."
        >
          To set the visibility of app in the Marketplace or manage installations, use the various sections on this page.
        </mock-styled.p>
        <mock-styled.button
          classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css."
          type="button"
        >
          <mock-styled.div />
          Back To Apps
        </mock-styled.button>
        <mock-styled.button
          classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css."
          type="button"
        >
          <mock-styled.div />
          View Listing
        </mock-styled.button>
      </mock-styled.aside>
      <mock-styled.section
        classname="mock-css.
  height: 100%;
"
      >
        <mock-styled.div
          classname="mock-css.
  justify-content: space-between;
"
        >
          <mock-styled.h1
            classname=""
          >
            SOME_NAME
             - 
            Geo Diary
          </mock-styled.h1>
        </mock-styled.div>
        <mock-styled.h2
          classname=""
        >
          Pricing Information
        </mock-styled.h2>
        <div
          class="mock-css.
  margin-bottom: 2.5rem;
"
        >
          <mock-styled.p
            classname="mock-css."
          >
            Reapit Ltd
             have specified there is no cost for using this App/Integration.
          </mock-styled.p>
        </div>
        <mock-styled.h2
          classname=""
        >
          Data Permissions
        </mock-styled.h2>
        <mock-styled.p
          classname="mock-css."
        >
          By installing this app, you are granting the following permissions to your data:
        </mock-styled.p>
        <mock-styled.div
          classname="mock-css.
  margin-bottom: 2.5rem;
"
        >
          <mock-styled.div
            classname=""
          >
            Information about your organisation
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            Names/email addresses of your users
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            Read applicants
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            Read appointments
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            Write appointments
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            Read contacts
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            Read landlords
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            Read negotiators
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            Read offers
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            Read offices
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            Read properties
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            Read tenancies
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            Read vendors
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            Read Referrals
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.h2
          classname=""
        >
          Application Visibility
        </mock-styled.h2>
        <mock-styled.p
          classname="mock-css."
        >
          By default, all apps will be visible to all offices/users within your organisation. If you wish to hide an app from the Marketplace, please deselect. Hidden apps (apps that have been deselected) will not be visible in the Marketplace to any offices/users inside of your organisation.
        </mock-styled.p>
        <mock-styled.div
          classname="mock-css.
  margin-bottom: 2.5rem;
"
        >
          <mock-styled.input
            checked="true"
            classname=""
            id="cfbe6f29-4003-4648-aa5a-8eb777bd606e"
            type="checkbox"
          />
          <mock-styled.label
            htmlfor="cfbe6f29-4003-4648-aa5a-8eb777bd606e"
          >
            Visible
          </mock-styled.label>
        </mock-styled.div>
        <div
          class="mock-css.
  margin-bottom: 2.5rem;
"
        >
          <mock-styled.h2
            classname=""
          >
            Current Installations
          </mock-styled.h2>
          <mock-styled.p
            classname="mock-css."
          >
            This app is not currently installed. You can either install for your organisation or specific office groups in the section below.
          </mock-styled.p>
        </div>
        <mock-styled.h2
          classname=""
        >
          Installation
        </mock-styled.h2>
        <mock-styled.p
          classname="mock-css. mock-css."
        >
          Please select the type of installation you require for this app:
        </mock-styled.p>
        <mock-styled.div
          classname="mock-css."
        >
          <mock-styled.div>
            <mock-styled.div
              classname="mock-css.
  margin-bottom: 0.75rem;
"
            >
              <mock-styled.input
                checked="false"
                classname=""
                id="WHOLE_ORG"
                type="checkbox"
              />
              <mock-styled.label
                htmlfor="WHOLE_ORG"
              >
                Install for the whole of your organisation
              </mock-styled.label>
            </mock-styled.div>
            <mock-styled.p
              classname=""
            >
              This will grant the app access to all data for all users and offices across your organisation
            </mock-styled.p>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div
              classname="mock-css.
  margin-bottom: 0.75rem;
"
            >
              <mock-styled.input
                checked="false"
                classname=""
                id="SPECIFIC_OFFICE_GROUPS"
                type="checkbox"
              />
              <mock-styled.label
                htmlfor="SPECIFIC_OFFICE_GROUPS"
              >
                Install for specific office groups
              </mock-styled.label>
            </mock-styled.div>
            <mock-styled.p
              classname=""
            >
              This will grant the app access to only data for the specific offices inside of each office group
            </mock-styled.p>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname="mock-css.
  margin-bottom: 1.25rem;
"
        >
          <mock-styled.div
            classname="mock-css."
          >
            <mock-styled.button
              classname="mock-css."
              disabled="true"
            >
              <mock-styled.div />
              Save
            </mock-styled.button>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.section>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`MarketplaceAppPage should match a snapshot when loading 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div
        classname="mock-css.
  flex: 1 1 auto;
"
      >
        <mock-styled.aside
          classname=""
        >
          <mock-styled.span
            classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css.
  font-size: 5rem;
"
          >
            <svg />
          </mock-styled.span>
          <mock-styled.p
            classname=""
          >
            Marketplace Visibility and Installation Management
          </mock-styled.p>
          <mock-styled.p
            classname="mock-css."
          >
            To set the visibility of app in the Marketplace or manage installations, use the various sections on this page.
          </mock-styled.p>
          <mock-styled.button
            classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css."
            type="button"
          >
            <mock-styled.div />
            Back To Apps
          </mock-styled.button>
          <mock-styled.button
            classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css."
            type="button"
          >
            <mock-styled.div />
            View Listing
          </mock-styled.button>
        </mock-styled.aside>
        <mock-styled.section
          classname="mock-css.
  height: 100%;
"
        >
          <mock-styled.div
            classname=""
          >
            <mock-styled.div>
              <mock-styled.div />
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.section>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div
      classname="mock-css.
  flex: 1 1 auto;
"
    >
      <mock-styled.aside
        classname=""
      >
        <mock-styled.span
          classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css.
  font-size: 5rem;
"
        >
          <svg />
        </mock-styled.span>
        <mock-styled.p
          classname=""
        >
          Marketplace Visibility and Installation Management
        </mock-styled.p>
        <mock-styled.p
          classname="mock-css."
        >
          To set the visibility of app in the Marketplace or manage installations, use the various sections on this page.
        </mock-styled.p>
        <mock-styled.button
          classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css."
          type="button"
        >
          <mock-styled.div />
          Back To Apps
        </mock-styled.button>
        <mock-styled.button
          classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css."
          type="button"
        >
          <mock-styled.div />
          View Listing
        </mock-styled.button>
      </mock-styled.aside>
      <mock-styled.section
        classname="mock-css.
  height: 100%;
"
      >
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.div />
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.section>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`MarketplaceAppPage should match a snapshot where no orgClientId exists 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div
        classname="mock-css.
  flex: 1 1 auto;
"
      >
        <mock-styled.aside
          classname=""
        >
          <mock-styled.span
            classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css.
  font-size: 5rem;
"
          >
            <svg />
          </mock-styled.span>
          <mock-styled.p
            classname=""
          >
            Marketplace Visibility and Installation Management
          </mock-styled.p>
          <mock-styled.p
            classname="mock-css."
          >
            To set the visibility of app in the Marketplace or manage installations, use the various sections on this page.
          </mock-styled.p>
          <div
            class="mock-css.
  margin-bottom: 0.75rem;
"
          >
            <mock-styled.p
              classname=""
            >
              Organisations
            </mock-styled.p>
            <mock-styled.p
              classname="mock-css."
            >
              You are an admin for multiple organisations - select from the list below for data specific to one of these organisations
            </mock-styled.p>
            <mock-styled.div
              classname="mock-css.
  border-radius: 0.25rem;
"
            >
              <mock-styled.div>
                <mock-styled.select
                  classname="mock-css.
  width: 100%;
"
                  value="SOME_ID"
                >
                  <option
                    value=""
                  >
                    Please Select
                  </option>
                  <option
                    value="value"
                  >
                    name
                  </option>
                  <option
                    value="value"
                  >
                    name
                  </option>
                </mock-styled.select>
                <mock-styled.label
                  htmlfor="myId"
                >
                  Select Organisation
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
          </div>
          <mock-styled.button
            classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css."
            type="button"
          >
            <mock-styled.div />
            Back To Apps
          </mock-styled.button>
          <mock-styled.button
            classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css."
            type="button"
          >
            <mock-styled.div />
            View Listing
          </mock-styled.button>
        </mock-styled.aside>
        <mock-styled.section
          classname="mock-css.
  height: 100%;
"
        >
          <mock-styled.div
            classname="mock-css. mock-css. mock-css. mock-css."
          >
            <div
              class="mock-css.
  padding-left: 0.75rem;
  display: flex;
  align-items: center;
  border-radius: var(--default-border-radius) 0 0 var(--default-border-radius);
  cursor: pointer;

  , {
    color: var(--color-white);
  }
"
              data-testid="close-icon"
            >
              <mock-styled.span
                classname=""
              >
                <svg />
              </mock-styled.span>
            </div>
            <div
              class="mock-css.
  padding: 0.75rem;
  transition: 0.5s;
  width: 100%;
  color: var(--color-black);
  font-size: var(--font-size-default);
"
            >
              No organisation selected. You need to select an organisation to view the app details.
            </div>
          </mock-styled.div>
        </mock-styled.section>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div
      classname="mock-css.
  flex: 1 1 auto;
"
    >
      <mock-styled.aside
        classname=""
      >
        <mock-styled.span
          classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css.
  font-size: 5rem;
"
        >
          <svg />
        </mock-styled.span>
        <mock-styled.p
          classname=""
        >
          Marketplace Visibility and Installation Management
        </mock-styled.p>
        <mock-styled.p
          classname="mock-css."
        >
          To set the visibility of app in the Marketplace or manage installations, use the various sections on this page.
        </mock-styled.p>
        <div
          class="mock-css.
  margin-bottom: 0.75rem;
"
        >
          <mock-styled.p
            classname=""
          >
            Organisations
          </mock-styled.p>
          <mock-styled.p
            classname="mock-css."
          >
            You are an admin for multiple organisations - select from the list below for data specific to one of these organisations
          </mock-styled.p>
          <mock-styled.div
            classname="mock-css.
  border-radius: 0.25rem;
"
          >
            <mock-styled.div>
              <mock-styled.select
                classname="mock-css.
  width: 100%;
"
                value="SOME_ID"
              >
                <option
                  value=""
                >
                  Please Select
                </option>
                <option
                  value="value"
                >
                  name
                </option>
                <option
                  value="value"
                >
                  name
                </option>
              </mock-styled.select>
              <mock-styled.label
                htmlfor="myId"
              >
                Select Organisation
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
        </div>
        <mock-styled.button
          classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css."
          type="button"
        >
          <mock-styled.div />
          Back To Apps
        </mock-styled.button>
        <mock-styled.button
          classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css."
          type="button"
        >
          <mock-styled.div />
          View Listing
        </mock-styled.button>
      </mock-styled.aside>
      <mock-styled.section
        classname="mock-css.
  height: 100%;
"
      >
        <mock-styled.div
          classname="mock-css. mock-css. mock-css. mock-css."
        >
          <div
            class="mock-css.
  padding-left: 0.75rem;
  display: flex;
  align-items: center;
  border-radius: var(--default-border-radius) 0 0 var(--default-border-radius);
  cursor: pointer;

  , {
    color: var(--color-white);
  }
"
            data-testid="close-icon"
          >
            <mock-styled.span
              classname=""
            >
              <svg />
            </mock-styled.span>
          </div>
          <div
            class="mock-css.
  padding: 0.75rem;
  transition: 0.5s;
  width: 100%;
  color: var(--color-black);
  font-size: var(--font-size-default);
"
          >
            No organisation selected. You need to select an organisation to view the app details.
          </div>
        </mock-styled.div>
      </mock-styled.section>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
